修改了index.html以支持OAuth

--- a/douban/source/index.html
+++ b/douban/source/index.html
@@ -28,6 +28,9 @@
     <div id="nav_right">
       <span href="" onmouseover="show(this)" onmouseout="show_out(this)"><span>下载豆瓣客户端</span></span>
       <span><span>登录/注册</span></span>
+      <a href="https://github.com/login/oauth/authorize?client_id=6ea9fe0ce0ebeed44a96&redirect_uri=http://39.106.81.229:9920/OAuthCallBack">
+        GitHub
+      </a>
       <span href="" id="username_a"></span>
     </div>
   <div id="loginafterhover">
@@ -265,7 +268,7 @@
               </div>
             </div>
           </div>
-          <div class="arrowheads"">
+          <div class="arrowheads">
             <div class="arrowhead" id="ar01"><</div>
             <div class="circle"></div>
             <div class="circle"></div>
@@ -315,7 +318,7 @@
               </div>
             </div>
           </div>
-          <div class="arrowheads"">
+          <div class="arrowheads">
             <div class="arrowhead" id="ar03"><</div>
             <div class="circle"></div>
             <div class="circle"></div>
@@ -388,7 +391,7 @@
           </div>
           <div id="left_05" class="left_box">
             <div class="header_font01 box_border">最受欢迎的影评<div class="font02 hoverall">更多热门影评»</div>
-              <div class="font02 hoverall"">新片影评»</div></div>
+              <div class="font02 hoverall">新片影评»</div></div>
         </div>
       </div>
       <div id=" right">
